# fractal-flame

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  docker-compose.yml
crates/fractal-flame-backend/: Cargo.toml  Dockerfile  config.example.json  config.json
crates/fractal-flame-backend/src/: di.rs  main.rs
crates/fractal-flame-backend/src/app/services/: minio_key_service.rs  mod.rs  redis_key_service.rs
crates/fractal-flame-backend/src/app/use_cases/: get_all_variations_command.rs  get_all_variations_command_handler.rs  get_intermediate_result_command.rs  get_intermediate_result_command_handler.rs  get_render_result_command.rs  get_render_result_command_handler.rs  get_variation_preview_command.rs  get_variation_preview_command_handler.rs  mod.rs  render_progress_command.rs  render_progress_command_handler.rs  run_render_job_command.rs  run_render_job_command_handler.rs
crates/fractal-flame-backend/src/infra/: config.rs  dependency.rs  minio.rs  mod.rs  preview_cache.rs  redis.rs
crates/fractal-flame-backend/src/views/: get_intermediate_result.rs  get_render_result.rs  get_variation_preview.rs  get_variations.rs  health.rs  mod.rs  render_progress.rs  start_render.rs
crates/fractal-flame-core/: Cargo.toml
crates/fractal-flame-core/src/: lib.rs
crates/fractal-flame-core/src/app/: mod.rs  (+2 more)
crates/fractal-flame-frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  styles.css
crates/fractal-flame-frontend/src/: app.rs  katex.rs  lib.rs  main.rs
deploy/fractal-flame/: Chart.yaml  values.yaml
deploy/fractal-flame/config/: config.json
(+31 files in other folders)
