[package]
name = "fractal-flame-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
fractal-flame-core = { path = "../fractal-flame-core" }
axum = "0.8"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
deadpool-redis = "0.16"
redis = { version = "0.26", features = ["connection-manager", "tokio-comp"] }
rust-s3 = { version = "0.37", features = ["tokio-rustls-tls"] }
