[package]
name = "fractal-flame-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = { version = "0.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Event", "HtmlElement", "HtmlInputElement", "InputEvent", "KeyboardEvent", "Window", "Navigator", "Clipboard", "Blob", "Url"] }
js-sys = "0.3"
gloo-console = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
